--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@ton/ton": "^13.11.2",
         "@types/jest": "^29.5.12",
         "@types/node": "^20.14.10",
+        "is-svg": "^5.1.0",
         "jest": "^29.7.0",
         "prettier": "^3.3.2",
         "tree-model": "^1.0.7",
