--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "devDependencies": {
         "@ton/blueprint": "^0.22.0",
         "@ton/core": "~0",
+        "fast-xml-parser": "^4.5.0",
         "@ton/crypto": "^3.2.0",
         "@ton/sandbox": "^0.20.0",
         "@ton/test-utils": "^0.4.2",
