--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "scripts": {
         "start": "blueprint run",
-        "build": "blueprint build --all",
+        "build": "blueprint build NicknamesCollection && blueprint build Master",
         "test": "jest --verbose",
         "polyfill": "./polyfilltact.sh"
     },
