--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "devDependencies": {
         "@ton/blueprint": "^0.22.0",
         "@ton/core": "~0",
-        "fast-xml-parser": "^4.5.0",
         "@ton/crypto": "^3.2.0",
         "@ton/sandbox": "^0.20.0",
         "@ton/test-utils": "^0.4.2",
         "@ton/ton": "^13.11.2",
         "@types/jest": "^29.5.12",
         "@types/node": "^20.14.10",
+        "fast-xml-parser": "^4.5.0",
         "is-svg": "^5.1.0",
         "jest": "^29.7.0",
         "prettier": "^3.3.2",
+        "tonweb": "^0.0.66",
         "tree-model": "^1.0.7",
         "ts-jest": "^29.2.0",
         "ts-node": "^10.9.2",
